tests/security/taintThroughResultGet/output.txt
ERROR: TaintedData - input.hack:31:14 - Data from a URL query string found its way to an HTML tag